--- a/index.html
+++ b/index.html
@@ -1,26 +1,58 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <title>portfolio-site</title>
-    <link rel="stylesheet" type="text/css" href="index.css">
+    <link rel="stylesheet" type="text/css" href="index.css" />
   </head>
   <body>
     <div class="page-wrapper">
-    <!-- Landing page -->
-    <div class="landing">
-      <h1>Welcome to my Portfolio Site</h1>
-      <h3>Tessa Fabry - Full Stack Web Developer</h3>
-      <a href="#">View Work</a>
+      <!-- Landing page -->
+      <div class="landing">
+        <h1>Welcome to my Portfolio Site</h1>
+        <h3>Tessa Fabry - Full Stack Web Developer</h3>
+        <a href="#">View Work</a>
+      </div>
+      <!-- Navbar -->
+      <nav>
+        <a href="./about.html">About</a>
+        <a href="./index.html">Portfolio</a>
+        <a href="./contact.html">Contact</a>
+        <a href="./blog.html">Blog</a>
+        <a href="#">Github</a>
+      </nav>
+      <!-- Portfolio -->
+      <div class="portfolio">
+        <h2>Portfolio</h2>
+        <div class="project">
+          <h3>Activity Tracker</h3>
+          <div class="project-content">
+            <img id="one" src="images/totals.png" />
+            <img id="two" src="images/totals.png" />
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio
+              doloremque cum esse voluptate reprehenderit beatae eos culpa
+              ipsam, corrupti totam architecto soluta sit consectetur distinctio
+              eius ad quo error dicta laudantium harum. Illo amet cumque tempore
+              error natus, dignissimos incidunt, odio maxime perferendis sint,
+              eveniet minima voluptatem accusamus. Excepturi molestiae iste
+              dolores hic sed nihil perferendis iure consectetur corrupti
+              voluptates commodi exercitationem, earum temporibus sapiente sint
+              numquam quidem, cum impedit id. Unde hic dolores reiciendis illo
+              accusamus ex aut aliquid. Eligendi inventore velit maxime repellat
+              maiores consequatur, minus distinctio aperiam incidunt optio fuga
+              explicabo quam tempore vel eos magnam laudantium!
+            </p>
+          </div>
+        </div>
+      </div>
+      <!-- FOOTER -->
+      <footer>
+        <a href="#">Linkedin</a>
+        <a href="#">Twitter</a>
+        <a href="#">Instagram</a>
+        <a href="#">Github</a>
+      </footer>
     </div>
-    <!-- Navbar -->
-    <nav>
-      <a href="#">About</a>
-      <a href="#">Portfolio</a>
-      <a href="#">Contact</a>
-      <a href="#">Blog</a>
-      <a href="#">Github</a>
-    </nav>
-  </div>
   </body>
 </html>
