basic mobile layouts

--- a/blog.html
+++ b/blog.html
@@ -10,11 +10,11 @@
     <!-- Navbar -->
     <nav>
         <a href="./about.html">About</a>
-        <a href="./index.html">Portfolio</a>
+        <a href="./index.html#portfolio">Portfolio</a>
         <a href="./contact.html">Contact</a>
-        <a href="#">Blog</a>
-        <a href="#">Github</a>
-    </nav>
+        <a href="./blog.html">Blog</a>
+        <a href="https://github.com/tessssssssy" target="_blank">Github</a>
+      </nav>
     <div class="blog">
       <h2>Blog</h2>
       <div class="blog-post">
