--- a/index.html
+++ b/index.html
@@ -11,24 +11,24 @@
       <div class="landing">
         <h1>Welcome to my Portfolio Site</h1>
         <h3>Tessa Fabry - Full Stack Web Developer</h3>
-        <a href="#">View Work</a>
+        <a href="#portfolio">View Work</a>
       </div>
       <!-- Navbar -->
       <nav>
         <a href="./about.html">About</a>
-        <a href="./index.html">Portfolio</a>
+        <a href="./index.html#portfolio">Portfolio</a>
         <a href="./contact.html">Contact</a>
         <a href="./blog.html">Blog</a>
-        <a href="#">Github</a>
+        <a href="https://github.com/tessssssssy" target="_blank">Github</a>
+        <i>Hamburger</i>
       </nav>
       <!-- Portfolio -->
-      <div class="portfolio">
+      <div id="portfolio" class="portfolio">
         <h2>Portfolio</h2>
         <div class="project">
           <h3>Activity Tracker</h3>
           <div class="project-content">
             <img id="one" src="images/totals.png" />
-            <img id="two" src="images/totals.png" />
             <p>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio
               doloremque cum esse voluptate reprehenderit beatae eos culpa
@@ -44,6 +44,9 @@
               explicabo quam tempore vel eos magnam laudantium!
             </p>
           </div>
+          <a href="#">See more</a> 
+          <!-- opens a popup slideshow explaining the project -->
+          <a href="#">Github</a>
         </div>
       </div>
       <!-- FOOTER -->
