--- a/about.html
+++ b/about.html
@@ -9,12 +9,12 @@
   <body>
     <!-- Navbar -->
     <nav>
-      <a href="#">About</a>
-      <a href="#">Portfolio</a>
-      <a href="#">Contact</a>
-      <a href="#">Blog</a>
-      <a href="#">Github</a>
-    </nav>
+        <a href="./about.html">About</a>
+        <a href="./index.html">Portfolio</a>
+        <a href="./contact.html">Contact</a>
+        <a href="./blog.html">Blog</a>
+        <a href="https://github.com/tessssssssy" target="_blank">Github</a>
+      </nav>
     <!-- Content -->
 
     <div class="about">
