--- a/contact.html
+++ b/contact.html
@@ -13,8 +13,8 @@
         <a href="./index.html">Portfolio</a>
         <a href="./contact.html">Contact</a>
         <a href="./blog.html">Blog</a>
-        <a href="#">Github</a>
-    </nav>
+        <a href="https://github.com/tessssssssy" target="_blank">Github</a>
+      </nav>
     <!-- CONTACT FORM -->
     <div class="contact">
         <h2>Contact Me</h2>
