add google fonts

--- a/blog.html
+++ b/blog.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="blog.css" />
+
+     <!-- FONTS -->
+     <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400&display=swap" rel="stylesheet">
+     <link href="https://fonts.googleapis.com/css?family=Prata&display=swap" rel="stylesheet">
     <title>Blog</title>
   </head>
   <body>
