--- a/index.html
+++ b/index.html
@@ -4,12 +4,18 @@
     <meta charset="UTF-8" />
     <title>portfolio-site</title>
     <link rel="stylesheet" type="text/css" href="index.css" />
+    <!-- FONTS -->
+    <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Prata&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lora:400,600&display=swap" rel="stylesheet">
+    <!-- ICONS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/js/all.min.js"></script>
   </head>
   <body>
     <div class="page-wrapper">
       <!-- Landing page -->
       <div class="landing">
-        <h1>Welcome to my Portfolio Site</h1>
+        <h1>Hello, Welcome to my Portfolio Site</h1>
         <h3>Tessa Fabry - Full Stack Web Developer</h3>
         <a href="#portfolio">View Work</a>
       </div>
@@ -20,7 +26,7 @@
         <a href="./contact.html">Contact</a>
         <a href="./blog.html">Blog</a>
         <a href="https://github.com/tessssssssy" target="_blank">Github</a>
-        <i>Hamburger</i>
+        <i class="fa fa-bars"></i>
       </nav>
       <!-- Portfolio -->
       <div id="portfolio" class="portfolio">
