--- a/index.html
+++ b/index.html
@@ -15,9 +15,12 @@
     <div class="page-wrapper">
       <!-- Landing page -->
       <div class="landing">
-        <h1>Hello, Welcome to my Portfolio Site</h1>
-        <h3>Tessa Fabry - Full Stack Web Developer</h3>
-        <a href="#portfolio">View Work</a>
+        <div class="landing-container">
+          <h1>Hello, Welcome to my Portfolio Site</h1>
+          <h3>Tessa Fabry - Full Stack Web Developer</h3>
+          <a href="#portfolio">View Work</a>
+        </div>
+      
       </div>
       <!-- Navbar -->
       <nav>
@@ -26,15 +29,67 @@
         <a href="./contact.html">Contact</a>
         <a href="./blog.html">Blog</a>
         <a href="https://github.com/tessssssssy" target="_blank">Github</a>
-        <i class="fa fa-bars"></i>
+        <!-- <i class="fa fa-bars"></i> -->
       </nav>
+     
       <!-- Portfolio -->
       <div id="portfolio" class="portfolio">
         <h2>Portfolio</h2>
-        <div class="project">
+        <div class="project" id="terminal-app">
           <h3>Activity Tracker</h3>
           <div class="project-content">
-            <img id="one" src="images/totals.png" />
+            <div class="slide-container">
+              <span id="slider-image-1"></span>
+              <span id="slider-image-2"></span>
+              <span id="slider-image-3"></span>
+              <div class="image-container">
+                <img src="./images/main-menu.png" class="slider-image">
+                <img src="./images/log.png" class="slider-image">
+                <img src="./images/option.png" class="slider-image">
+              </div>
+              <div class="button-container">
+                <a href="#slider-image-1" class="slider-button"></a>
+                <a href="#slider-image-2" class="slider-button"></a>
+                <a href="#slider-image-3" class="slider-button"></a>
+              </div>
+            </div>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio
+              doloremque cum esse voluptate reprehenderit beatae eos culpa
+              ipsam, corrupti totam architecto soluta sit consectetur distinctio
+              eius ad quo error dicta laudantium harum. Illo amet cumque tempore
+              error natus, dignissimos incidunt, odio maxime perferendis sint,
+              eveniet minima voluptatem accusamus. Excepturi molestiae iste
+              dolores hic sed nihil perferendis iure consectetur corrupti
+              voluptates commodi exercitationem, earum temporibus sapiente sint
+              numquam quidem, cum impedit id. Unde hic dolores reiciendis illo
+              accusamus ex aut aliquid. Eligendi inventore velit maxime repellat
+              maiores consequatur, minus distinctio aperiam incidunt optio fuga
+              explicabo quam tempore vel eos magnam laudantium!
+            </p>
+          </div>
+          <a href="#">See more</a> 
+          <!-- opens a popup slideshow explaining the project -->
+          <a href="#">Github</a>
+        </div>
+        <div class="project" id="toy-robot">
+          <h3>Toy Robot</h3>
+          <div class="project-content">
+            <div class="slide-container">
+              <span id="slider-image-1"></span>
+              <span id="slider-image-2"></span>
+              <span id="slider-image-3"></span>
+              <div class="image-container">
+                <img src="./images/main-menu.png" class="slider-image">
+                <img src="./images/log.png" class="slider-image">
+                <img src="./images/option.png" class="slider-image">
+              </div>
+              <div class="button-container">
+                <a href="#slider-image-1" class="slider-button"></a>
+                <a href="#slider-image-2" class="slider-button"></a>
+                <a href="#slider-image-3" class="slider-button"></a>
+              </div>
+            </div>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio
               doloremque cum esse voluptate reprehenderit beatae eos culpa
