add project images

--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,8 @@
      <!-- FONTS -->
      <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400&display=swap" rel="stylesheet">
      <link href="https://fonts.googleapis.com/css?family=Prata&display=swap" rel="stylesheet">
+     <link href="https://fonts.googleapis.com/css?family=Lora:400,600&display=swap" rel="stylesheet">
+     
     <title>Contact</title>
 </head>
 <body>
