--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <!-- Landing page -->
       <div class="landing">
         <div class="landing-container">
-          <h1>Hello, Welcome to my Portfolio Site</h1>
+          <h1>Welcome to my Portfolio Site</h1>
           <h3>Tessa Fabry - Full Stack Web Developer</h3>
           <a href="#portfolio">View Work</a>
         </div>
@@ -43,9 +43,9 @@
               <span id="slider-image-2"></span>
               <span id="slider-image-3"></span>
               <div class="image-container">
-                <img src="./images/main-menu.png" class="slider-image">
-                <img src="./images/log.png" class="slider-image">
-                <img src="./images/option.png" class="slider-image">
+                <img src="./images/terminal-1.png" class="slider-image">
+                <img src="./images/terminal-2.png" class="slider-image">
+                <img src="./images/terminal-3.png" class="slider-image">
               </div>
               <div class="button-container">
                 <a href="#slider-image-1" class="slider-button"></a>
@@ -54,23 +54,12 @@
               </div>
             </div>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio
-              doloremque cum esse voluptate reprehenderit beatae eos culpa
-              ipsam, corrupti totam architecto soluta sit consectetur distinctio
-              eius ad quo error dicta laudantium harum. Illo amet cumque tempore
-              error natus, dignissimos incidunt, odio maxime perferendis sint,
-              eveniet minima voluptatem accusamus. Excepturi molestiae iste
-              dolores hic sed nihil perferendis iure consectetur corrupti
-              voluptates commodi exercitationem, earum temporibus sapiente sint
-              numquam quidem, cum impedit id. Unde hic dolores reiciendis illo
-              accusamus ex aut aliquid. Eligendi inventore velit maxime repellat
-              maiores consequatur, minus distinctio aperiam incidunt optio fuga
-              explicabo quam tempore vel eos magnam laudantium!
+              A command line based fitness app written in Ruby. The activity tracker allows users to track exercise progress
+              by recording activities including running, cycling, swimming, walking and hiking. Users can record the time and 
+              distance of each workout and use the app to calculate their monthly and overall totals for each exercise type.
             </p>
           </div>
-          <a href="#">See more</a> 
-          <!-- opens a popup slideshow explaining the project -->
-          <a href="#">Github</a>
+          <a class="github" href="#">Github</a>
         </div>
         <div class="project" id="toy-robot">
           <h3>Toy Robot</h3>
@@ -94,20 +83,10 @@
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio
               doloremque cum esse voluptate reprehenderit beatae eos culpa
               ipsam, corrupti totam architecto soluta sit consectetur distinctio
-              eius ad quo error dicta laudantium harum. Illo amet cumque tempore
-              error natus, dignissimos incidunt, odio maxime perferendis sint,
-              eveniet minima voluptatem accusamus. Excepturi molestiae iste
-              dolores hic sed nihil perferendis iure consectetur corrupti
-              voluptates commodi exercitationem, earum temporibus sapiente sint
-              numquam quidem, cum impedit id. Unde hic dolores reiciendis illo
-              accusamus ex aut aliquid. Eligendi inventore velit maxime repellat
-              maiores consequatur, minus distinctio aperiam incidunt optio fuga
-              explicabo quam tempore vel eos magnam laudantium!
+              eius ad quo error dicta laudantium harum.
             </p>
           </div>
-          <a href="#">See more</a> 
-          <!-- opens a popup slideshow explaining the project -->
-          <a href="#">Github</a>
+          <a class="github" href="#">Github</a>
         </div>
       </div>
       <!-- FOOTER -->
