--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
               distance of each workout and use the app to calculate their monthly and overall totals for each exercise type.
             </p>
           </div>
-          <a class="github" href="#">Github</a>
+          <a class="github" href="https://github.com/tessssssssy/terminal-app" target="_blank">Github</a>
         </div>
         <div class="project" id="toy-robot">
           <h3>Toy Robot</h3>
@@ -86,7 +86,7 @@
               eius ad quo error dicta laudantium harum.
             </p>
           </div>
-          <a class="github" href="#">Github</a>
+          <a class="github" href="https://github.com/tessssssssy/toy_robot" target="_blank">Github</a>
         </div>
       </div>
       <!-- FOOTER -->
