--- a/about.html
+++ b/about.html
@@ -8,7 +8,9 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Prata&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lora:400,600&display=swap" rel="stylesheet">
-    
+
+    <!-- ICONS -->
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
     <title>About</title>
   </head>
   <body>
@@ -41,19 +43,19 @@
       <h3>Skills</h3>
       <div class="skills-container">
         <div class="skill">
-          <img src="#" />
+          <i class="fab fa-html5"></i>
           <p>HTML</p>
         </div>
         <div class="skill">
-          <img src="#" />
+          <i class="fab fa-css3-alt"></i>
           <p>CSS</p>
         </div>
         <div class="skill">
-          <img src="#" />
+          <i class="fab fa-js-square"></i>
           <p>Javascript</p>
         </div>
         <div class="skill">
-          <img src="#" />
+          <img src="https://img.icons8.com/ios/50/000000/ruby-programming-language.png"/>
           <p>Ruby</p>
         </div>
       </div>
