add rock paper scissors slides

--- a/index.html
+++ b/index.html
@@ -61,32 +61,30 @@
           </div>
           <a class="github" href="https://github.com/tessssssssy/terminal-app" target="_blank">Github</a>
         </div>
-        <div class="project" id="toy-robot">
-          <h3>Toy Robot</h3>
+        <div class="project">
+          <h3>Rock Paper Scissors</h3>
           <div class="project-content">
             <div class="slide-container">
-              <span id="slider-image-1"></span>
-              <span id="slider-image-2"></span>
-              <span id="slider-image-3"></span>
+              <span id="rock-image-1"></span>
+              <span id="rock-image-2"></span>
+              <span id="rock-image-3"></span>
               <div class="image-container">
-                <img src="./images/main-menu.png" class="slider-image">
-                <img src="./images/log.png" class="slider-image">
-                <img src="./images/option.png" class="slider-image">
+                <img src="./images/rock-paper-scissors-1.png" class="slider-image">
+                <img src="./images/rock-paper-scissors-2.png" class="slider-image">
+                <img src="./images/rock-paper-scissors-3.png" class="slider-image">
               </div>
               <div class="button-container">
-                <a href="#slider-image-1" class="slider-button"></a>
-                <a href="#slider-image-2" class="slider-button"></a>
-                <a href="#slider-image-3" class="slider-button"></a>
+                <a href="#rock-image-1" class="slider-button"></a>
+                <a href="#rock-image-2" class="slider-button"></a>
+                <a href="#rock-image-3" class="slider-button"></a>
               </div>
             </div>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio
-              doloremque cum esse voluptate reprehenderit beatae eos culpa
-              ipsam, corrupti totam architecto soluta sit consectetur distinctio
-              eius ad quo error dicta laudantium harum.
+              A web based rock paper scissors game with an interactive user interface, written with HTML, CSS and Javascript. 
+              Users can play rock, paper, scissors against the computer, which randomly selects an option to play against their choice. 
             </p>
           </div>
-          <a class="github" href="https://github.com/tessssssssy/toy_robot" target="_blank">Github</a>
+          <a class="github" href="https://github.com/tessssssssy/rock-paper-scissors" target="_blank">Github</a>
         </div>
       </div>
       <!-- FOOTER -->
