--- a/index.html
+++ b/index.html
@@ -86,6 +86,30 @@
           </div>
           <a class="github" href="https://github.com/tessssssssy/rock-paper-scissors" target="_blank">Github</a>
         </div>
+        <div class="project">
+          <h3>Toy Robot</h3>
+          <div class="project-content">
+            <div class="slide-container">
+              <span id="robot-image-1"></span>
+              <span id="robot-image-2"></span>
+              <span id="robot-image-3"></span>
+              <div class="image-container">
+                <img src="./images/robot-1.png" class="slider-image">
+                <img src="./images/robot-2.png" class="slider-image">
+                <img src="./images/robot-3.png" class="slider-image">
+              </div>
+              <div class="button-container">
+                <a href="#robot-image-1" class="slider-button"></a>
+                <a href="#robot-image-2" class="slider-button"></a>
+                <a href="#robot-image-3" class="slider-button"></a>
+              </div>
+            </div>
+            <p>
+              This is my solution to the Toy Robot coding challenge.
+            </p>
+          </div>
+          <a class="github" href="https://github.com/tessssssssy/toy_robot" target="_blank">Github</a>
+        </div>
       </div>
       <!-- FOOTER -->
       <footer>
