--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
             <input type="email" name="email"/>
             <label for="name">Your name</label>
             <input type="name" name="name"/>
-            <textarea rows="10" cols="50" placeholder="your message here"></textarea>
+            <textarea rows="10" placeholder="your message here"></textarea>
             <button>Submit</button>
           </form>
     </div>
