changed landing image

--- a/about.html
+++ b/about.html
@@ -29,14 +29,12 @@
       <!-- BIO -->
       <h3>A little bit about me</h3>
       <div class="bio">
-        <img src="#" />
+        <img src="images/self-portrait.jpg" />
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid magni
-          soluta esse architecto numquam, consectetur incidunt, molestiae,
-          facilis dolor sed praesentium veritatis maiores quis. Ex corporis
-          libero dicta. Natus, quasi sunt. Asperiores natus quia exercitationem
-          quod nobis officia nihil placeat accusantium reprehenderit, at iusto
-          quas quisquam atque facilis reiciendis debitis.
+          My name is Tessa Fabry.  About a year ago I decided to teach myself how to code. 
+          Now I'm enrolled in the FastTrack Web Development Bootcamp at Coder Academy, Melbourne. 
+          Through this course, I aim to greatly expand on my self taught knowledge, with the goal of 
+          gaining employment as a full stack developer on completion. 
         </p>
       </div>
       <!-- SKILLS -->
@@ -63,8 +61,8 @@
       <!-- LINKS -->
       <h3>Links</h3>
       <div class="links-container">
-          <a href="#">Linkedin</a>
-          <a href="#">Github</a>
+          <a href="https://www.linkedin.com/in/tessa-fabry-80874b69/">Linkedin</a>
+          <a href="https://github.com/tessssssssy">Github</a>
           <a href="#">Resume</a>
       </div>
     </div>
