--- a/blog.html
+++ b/blog.html
@@ -33,7 +33,7 @@
             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Delectus,
             earum veritatis! Deleniti cum veniam, perferendis sapiente, quos
             magnam labore voluptas, error repellat nulla esse aperiam nam
-            cumque! Rem, incidunt! Consectetur obcaecati, id doloremque,
+            cumque! <img src="images/time-lapse-photo-of-lights-220118.jpg"> Rem, incidunt! Consectetur obcaecati, id doloremque,
             suscipit vel animi iusto veritatis voluptate consequuntur assumenda
             ea! Praesentium assumenda unde provident quia atque nam sint autem
             at veritatis, eligendi excepturi neque mollitia voluptas, error ex
