--- a/contact.html
+++ b/contact.html
@@ -25,13 +25,13 @@
     <div class="contact">
         <h2>Contact Me</h2>
         <h3>Send me a message</h3>
-        <form>
+        <form action="https://formspree.io/xaybrrgy" method="POST">
             <label for="email">Your email</label>
             <input type="email" name="email"/>
             <label for="name">Your name</label>
             <input type="name" name="name"/>
             <textarea rows="10" placeholder="your message here"></textarea>
-            <button>Submit</button>
+            <button type="submit">Submit</button>
           </form>
     </div>
 
