--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
               <span id="slider-image-2"></span>
               <span id="slider-image-3"></span>
               <div class="image-container">
-                <img src="./images/terminal-1.png" class="slider-image">
-                <img src="./images/terminal-2.png" class="slider-image">
-                <img src="./images/terminal-3.png" class="slider-image">
+                <img src="./images/terminal-1-3.png" class="slider-image">
+                <img src="./images/terminal-2-3.png" class="slider-image">
+                <img src="./images/terminal-3-3.png" class="slider-image">
               </div>
               <div class="button-container">
                 <a href="#slider-image-1" class="slider-button"></a>
@@ -61,7 +61,7 @@
           </div>
           <a class="github" href="https://github.com/tessssssssy/terminal-app" target="_blank">Github</a>
         </div>
-        <div class="project">
+        <div class="project" id="rock-paper-scissors">
           <h3>Rock Paper Scissors</h3>
           <div class="project-content">
             <div class="slide-container">
@@ -86,7 +86,7 @@
           </div>
           <a class="github" href="https://github.com/tessssssssy/rock-paper-scissors" target="_blank">Github</a>
         </div>
-        <div class="project">
+        <div class="project" id="toy-robot">
           <h3>Toy Robot</h3>
           <div class="project-content">
             <div class="slide-container">
