--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
             </p>
           </div>
           <a class="github" href="https://github.com/tessssssssy/rock-paper-scissors" target="_blank">Github</a>
+          <a class="site" href="https://ecstatic-yonath-e021c2.netlify.com/" target="_blank">View</a>
         </div>
         <div class="project" id="toy-robot">
           <h3>Toy Robot</h3>
