--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
       <!-- Landing page -->
       <div class="landing">
         <div class="landing-container">
-          <h1>Welcome to my Portfolio Site</h1>
+          <div class="heading-container">
+            <h1>Welcome to my Portfolio Site</h1>
+          </div>
+          
           <h3>Tessa Fabry - Full Stack Web Developer</h3>
           <a href="#portfolio">View Work</a>
         </div>
