--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>portfolio-site</title>
     <link rel="stylesheet" type="text/css" href="index.css" />
     <!-- FONTS -->
@@ -19,7 +20,6 @@
           <div class="heading-container">
             <h1>Welcome to my Portfolio Site</h1>
           </div>
-          
           <h3>Tessa Fabry - Full Stack Web Developer</h3>
           <a href="#portfolio">View Work</a>
         </div>
