--- a/index.html
+++ b/index.html
@@ -27,14 +27,15 @@
       </div>
       <!-- Navbar -->
       <nav>
-        <a href="./about.html">About</a>
-        <a href="./index.html#portfolio">Portfolio</a>
-        <a href="./contact.html">Contact</a>
-        <a href="./blog.html">Blog</a>
-        <a href="https://github.com/tessssssssy" target="_blank">Github</a>
-        <!-- <i class="fa fa-bars"></i> -->
+        <a href="./about.html" class="nav-link">About</a>
+        <a href="./index.html#portfolio" class="nav-link">Portfolio</a>
+        <a href="./contact.html" class="nav-link">Contact</a>
+        <a href="./blog.html" class="nav-link">Blog</a>
+        <a href="https://github.com/tessssssssy" class="nav-link" target="_blank">Github</a>
+        <!--  -->
+        <div id="hamburger"><i class="fa fa-bars"></i></div>
+        <!-- <button id="hamburger">View</button> -->
       </nav>
-     
       <!-- Portfolio -->
       <div id="portfolio" class="portfolio">
         <h2>Portfolio</h2>
@@ -123,5 +124,6 @@
         <a href="#">Github</a>
       </footer>
     </div>
+    <script src="index.js"></script>
   </body>
 </html>
