--- a/index.html
+++ b/index.html
@@ -27,11 +27,13 @@
       </div>
       <!-- Navbar -->
       <nav>
-        <a href="./about.html" class="nav-link">About</a>
-        <a href="./index.html#portfolio" class="nav-link">Portfolio</a>
-        <a href="./contact.html" class="nav-link">Contact</a>
-        <a href="./blog.html" class="nav-link">Blog</a>
-        <a href="https://github.com/tessssssssy" class="nav-link" target="_blank">Github</a>
+        <div class="nav-links-container">
+          <a href="./about.html" class="nav-link">About</a>
+          <a href="./index.html#portfolio" class="nav-link">Portfolio</a>
+          <a href="./contact.html" class="nav-link">Contact</a>
+          <a href="./blog.html" class="nav-link">Blog</a>
+          <a href="https://github.com/tessssssssy" class="nav-link" target="_blank">Github</a>
+        </div>
         <!--  -->
         <div id="hamburger"><i class="fa fa-bars"></i></div>
         <!-- <button id="hamburger">View</button> -->
