--- a/about.html
+++ b/about.html
@@ -16,12 +16,17 @@
   <body>
     <!-- Navbar -->
     <nav>
-        <a href="./about.html">About</a>
-        <a href="./index.html">Portfolio</a>
-        <a href="./contact.html">Contact</a>
-        <a href="./blog.html">Blog</a>
-        <a href="https://github.com/tessssssssy" target="_blank">Github</a>
-      </nav>
+      <div class="nav-links-container">
+        <a href="./about.html" class="nav-link">About</a>
+        <a href="./index.html#portfolio" class="nav-link">Portfolio</a>
+        <a href="./contact.html" class="nav-link">Contact</a>
+        <a href="./blog.html" class="nav-link">Blog</a>
+        <a href="https://github.com/tessssssssy" class="nav-link" target="_blank">Github</a>
+      </div>
+      <!--  -->
+      <div id="hamburger"><i class="fa fa-bars"></i></div>
+      <!-- <button id="hamburger">View</button> -->
+    </nav>
     <!-- Content -->
 
     <div class="about">
