--- a/about.html
+++ b/about.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css?family=Lora:400,600&display=swap" rel="stylesheet">
 
     <!-- ICONS -->
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/js/all.min.js"></script> -->
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
     <title>About</title>
   </head>
@@ -78,5 +79,6 @@
         <a href="#">Instagram</a>
         <a href="#">Github</a>
       </footer>
+      <script src="index.js"></script>
   </body>
 </html>
