--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,9 @@
      <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400&display=swap" rel="stylesheet">
      <link href="https://fonts.googleapis.com/css?family=Prata&display=swap" rel="stylesheet">
      <link href="https://fonts.googleapis.com/css?family=Lora:400,600&display=swap" rel="stylesheet">
+
+      <!-- ICONS -->
+      <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
      
     <title>Contact</title>
 </head>
@@ -47,5 +50,6 @@
         <a href="#">Instagram</a>
         <a href="#">Github</a>
       </footer>
+      <script src="index.js"></script>
 </body>
 </html>
