--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
       <!-- BIO -->
       <h3>A little bit about me</h3>
       <div class="bio">
-        <img src="images/self-portrait.jpg" />
+        <img src="images/self-portrait.jpg" alt="self portrait"/>
         <p>
           My name is Tessa Fabry.  About a year ago I decided to teach myself how to code. 
           Now I'm enrolled in the FastTrack Web Development Bootcamp at Coder Academy, Melbourne. 
@@ -59,7 +59,7 @@
           <p>Javascript</p>
         </div>
         <div class="skill">
-          <img src="https://img.icons8.com/ios/50/000000/ruby-programming-language.png"/>
+          <img src="https://img.icons8.com/ios/50/000000/ruby-programming-language.png"alt="ruby logo"/>
           <p>Ruby</p>
         </div>
       </div>
@@ -74,10 +74,10 @@
     </div>
     <!-- FOOTER -->
     <footer>
-        <a href="#">Linkedin</a>
-        <a href="#">Twitter</a>
-        <a href="#">Instagram</a>
-        <a href="#">Github</a>
+        <a href="https://www.linkedin.com/in/tessa-fabry-80874b69/" target="_blank"><i class="fab fa-linkedin"></i></a>
+        <a href="https://twitter.com/tessssssssy" target="_blank"><i class="fab fa-twitter-square"></i></a>
+        <a href="https://www.instagram.com/tessssssssy/" target="_blank"><i class="fab fa-instagram"></i></a>
+        <a href="https://github.com/tessssssssy" target="_blank"><i class="fab fa-github"></i></a>
       </footer>
       <script src="index.js"></script>
   </body>
