--- a/blog.html
+++ b/blog.html
@@ -25,9 +25,8 @@
         <a href="./blog.html" class="nav-link">Blog</a>
         <a href="https://github.com/tessssssssy" class="nav-link" target="_blank">Github</a>
       </div>
-      <!--  -->
+      <!-- ICON FOR MOBILE NAV -->
       <div id="hamburger"><i class="fa fa-bars"></i></div>
-      <!-- <button id="hamburger">View</button> -->
     </nav>
     <div class="blog">
       <h2>Blog</h2>
@@ -67,13 +66,145 @@
           </p>
         </article>
       </div>
+      <div class="blog-post">
+        <header>
+          <h3>Another Post</h3>
+          <h5 class="date">dd/mm/yy</h5>
+        </header>
+        <article>
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Delectus,
+            earum veritatis! Deleniti cum veniam, perferendis sapiente, quos
+            magnam labore voluptas, error repellat nulla esse aperiam nam
+            cumque!  Rem, incidunt! Consectetur obcaecati, id doloremque,
+            suscipit vel animi iusto veritatis voluptate consequuntur assumenda
+            ea! Praesentium assumenda unde provident quia atque nam sint autem
+            at veritatis, eligendi excepturi neque mollitia voluptas, error ex
+            reiciendis voluptatem optio in. Sint <a href="#">mollitia </a>vero nobis earum esse
+            eos aut nulla, enim error recusandae ea natus corrupti omnis harum
+            est hic alias, provident, dolor aspernatur fuga eligendi animi.
+            Molestias temporibus deserunt laboriosam, laudantium ex aliquam
+            exercitationem quod unde.
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Delectus,
+            earum veritatis! Deleniti cum veniam, perferendis sapiente, quos
+            magnam labore voluptas, error repellat nulla esse aperiam nam
+            cumque! Rem, incidunt! Consectetur obcaecati, id doloremque,
+            suscipit vel animi iusto veritatis voluptate consequuntur assumenda
+            ea! Praesentium assumenda unde provident quia atque nam sint autem
+            at veritatis, <img src="images/doggo.jpg" alt="dog catching a ball"> eligendi excepturi neque mollitia voluptas, error ex
+            reiciendis voluptatem optio in. Sint mollitia vero nobis earum esse
+            eos aut nulla, enim error recusandae ea natus corrupti omnis harum
+            est hic alias, provident, dolor aspernatur fuga eligendi animi.
+            Molestias temporibus deserunt laboriosam, laudantium ex aliquam
+            exercitationem quod unde.
+          </p>
+        </article>
+      </div>
+      <div class="blog-post">
+        <header>
+          <h3>Hello There</h3>
+          <h5 class="date">dd/mm/yy</h5>
+        </header>
+        <article>
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Delectus,
+            earum veritatis! Deleniti cum veniam, perferendis sapiente, quos
+            magnam laint autem
+            at veritatis, eligendi excepturi neque mollitia voluptas, error ex
+            reiciendis voluptatem optio in. Sint <a href="#">mollitia </a>vero nobis earum esse
+            eos aut nulla, enim error recusandae ea natus corrupti omnis harum
+            est hic alias, provident, dolor aspernatur fuga eligendi animi.
+            Molestias temporibus deserunt laboriosam, laudantium ex aliquam
+            exercitationem quod unde.
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Delectus,
+            earum verita oremque,
+            suscipit vel animi iusto veritatis voluptate consequuntur assumenda
+            ea! Praesentium assumenda unde provident quia atque nam sint autem
+            at veritatis, <img src="images/motorbikes.jpg" alt="motorbikes against a wall"> eligendi excepturi neque mollitia voluptas, error ex
+            reiciendis voluptatem optio in. Sint mollitia vero nobis earum esse
+            eos aut nulla, enim error recusandae ea natus corrupti omnis harum
+            est hic alias, provident, dolor aspernatur fuga eligendi animi.
+            Molestias temporibus deserunt laboriosam, laudantium ex aliquam
+            exercitationem quod unde.
+          </p>
+        </article>
+      </div>
+
+      <div class="blog-post">
+        <header>
+          <h3>Yet another blog post</h3>
+          <h5 class="date">dd/mm/yy</h5>
+        </header>
+        <article>
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Delectus,
+            earum veritatis! Deleniti cum veniam, perferendis sapiente, quos
+            magnam laint autem
+            at veritatis, eligendi excepturi neque mollitia voluptas, error ex
+            reiciendis voluptatem optio in. Sint <a href="#">mollitia </a>vero nobis earum esse
+            eos aut nulla, enim error recusandae ea natus corrupti omnis harum
+            est hic alias, provident, dolor aspernatur fuga eligendi animi.
+            Molestias temporibus deserunt laboriosam, laudantium ex aliquam
+            exercitationem quod unde.
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Delectus,
+            earum verita oremque,
+            suscipit vel animi iusto veritatis voluptate consequuntur assumenda
+            ea! Praesentium assumenda unde provident quia atque nam sint autem
+            at veritatis, <img src="images/lens-flare.jpg" alt="sunlight through shrubery"> eligendi excepturi neque mollitia voluptas, error ex
+            reiciendis voluptatem optio in. Sint mollitia vero nobis earum esse
+            eos aut nulla, enim error recusandae ea natus corrupti omnis harum
+            est hic alias, provident, dolor aspernatur fuga eligendi animi.
+            Molestias temporibus deserunt laboriosam, laudantium ex aliquam
+            exercitationem quod unde.
+          </p>
+        </article>
+      </div>
+
+      <div class="blog-post">
+        <header>
+          <h3>This is a weird submission requirement</h3>
+          <h5 class="date">dd/mm/yy</h5>
+        </header>
+        <article>
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Delectus,
+            earum veritatis! Deleniti cum veniam, perferendis sapiente, quos
+            magnam laint autem
+            at veritatis, eligendi excepturi neque mollitia voluptas, error ex
+            reiciendis voluptatem optio in. Sint mollitiavero nobis earum esse
+            eos aut nulla, enim error recusandae ea natus corrupti omnis harum
+            est hic  <img src="images/canyon.jpg" alt="sunset over the canyon">alias, provident, dolor aspernatur fuga eligendi animi.
+            Molestias temporibus deserunt laboriosam, laudantium ex aliquam
+            exercitationem quod unde.
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Delectus,
+            earum verita oremque,
+            suscipit vel animi iusto veritatis voluptate consequuntur assumenda
+            ea! Praesentium assumenda unde provident quia atque nam sint autem
+            at veritatis, eligendi excepturi neque mollitia voluptas, error ex
+            reiciendis voluptatem optio in. Sint mollitia vero nobis earum esse
+            eos aut nulla, enim error recusandae ea natus corrupti omnis harum
+            est hic alias, provident, dolor aspernatur fuga eligendi animi.
+            Molestias temporibus deserunt laboriosam, laudantium ex aliquam
+            exercitationem quod unde.
+          </p>
+        </article>
+      </div>
+      
     </div>
      <!-- FOOTER -->
      <footer>
-        <a href="#">Linkedin</a>
-        <a href="#">Twitter</a>
-        <a href="#">Instagram</a>
-        <a href="#">Github</a>
+      <a href="https://www.linkedin.com/in/tessa-fabry-80874b69/" target="_blank"><i class="fab fa-linkedin"></i></a>
+      <a href="https://twitter.com/tessssssssy" target="_blank"><i class="fab fa-twitter-square"></i></a>
+      <a href="https://www.instagram.com/tessssssssy/" target="_blank"><i class="fab fa-instagram"></i></a>
+      <a href="https://github.com/tessssssssy" target="_blank"><i class="fab fa-github"></i></a>
       </footer>
       <script src="index.js"></script>
   </body>
