--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,6 @@
       </div>
       <!--  -->
       <div id="hamburger"><i class="fa fa-bars"></i></div>
-      <!-- <button id="hamburger">View</button> -->
     </nav>
     <!-- CONTACT FORM -->
     <div class="contact">
@@ -45,10 +44,10 @@
 
      <!-- FOOTER -->
      <footer>
-        <a href="#">Linkedin</a>
-        <a href="#">Twitter</a>
-        <a href="#">Instagram</a>
-        <a href="#">Github</a>
+      <a href="https://www.linkedin.com/in/tessa-fabry-80874b69/" target="_blank"><i class="fab fa-linkedin"></i></a>
+      <a href="https://twitter.com/tessssssssy" target="_blank"><i class="fab fa-twitter-square"></i></a>
+      <a href="https://www.instagram.com/tessssssssy/" target="_blank"><i class="fab fa-instagram"></i></a>
+      <a href="https://github.com/tessssssssy" target="_blank"><i class="fab fa-github"></i></a>
       </footer>
       <script src="index.js"></script>
 </body>
