--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>portfolio-site</title>
+    <title>Tessa Fabry - Portfolio</title>
     <link rel="stylesheet" type="text/css" href="index.css" />
     <!-- FONTS -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400&display=swap" rel="stylesheet">
@@ -34,9 +34,8 @@
           <a href="./blog.html" class="nav-link">Blog</a>
           <a href="https://github.com/tessssssssy" class="nav-link" target="_blank">Github</a>
         </div>
-        <!--  -->
+        <!-- ICON FOR MOBILE NAV -->
         <div id="hamburger"><i class="fa fa-bars"></i></div>
-        <!-- <button id="hamburger">View</button> -->
       </nav>
       <!-- Portfolio -->
       <div id="portfolio" class="portfolio">
@@ -49,9 +48,9 @@
               <span id="slider-image-2"></span>
               <span id="slider-image-3"></span>
               <div class="image-container">
-                <img src="./images/terminal-1-3.png" class="slider-image">
-                <img src="./images/terminal-2-3.png" class="slider-image">
-                <img src="./images/terminal-3-3.png" class="slider-image">
+                <img src="./images/terminal-1-3.png" class="slider-image" alt="app menu">
+                <img src="./images/terminal-2-3.png" class="slider-image" alt="table of activities">
+                <img src="./images/terminal-3-3.png" class="slider-image" alt="table of personal records">
               </div>
               <div class="button-container">
                 <a href="#slider-image-1" class="slider-button"></a>
@@ -75,9 +74,9 @@
               <span id="rock-image-2"></span>
               <span id="rock-image-3"></span>
               <div class="image-container">
-                <img src="./images/rock-paper-scissors-1.png" class="slider-image">
-                <img src="./images/rock-paper-scissors-2.png" class="slider-image">
-                <img src="./images/rock-paper-scissors-3.png" class="slider-image">
+                <img src="./images/rock-paper-scissors-1.png" class="slider-image" alt="code screenshot">
+                <img src="./images/rock-paper-scissors-2.png" class="slider-image" alt="code screenshot">
+                <img src="./images/rock-paper-scissors-3.png" class="slider-image" alt="code screenshot">
               </div>
               <div class="button-container">
                 <a href="#rock-image-1" class="slider-button"></a>
@@ -101,9 +100,9 @@
               <span id="robot-image-2"></span>
               <span id="robot-image-3"></span>
               <div class="image-container">
-                <img src="./images/robot-1.png" class="slider-image">
-                <img src="./images/robot-2.png" class="slider-image">
-                <img src="./images/robot-3.png" class="slider-image">
+                <img src="./images/robot-1.png" class="slider-image" alt="code screenshot">
+                <img src="./images/robot-2.png" class="slider-image" alt="code screenshot">
+                <img src="./images/robot-3.png" class="slider-image" alt="code screenshot">
               </div>
               <div class="button-container">
                 <a href="#robot-image-1" class="slider-button"></a>
@@ -120,12 +119,13 @@
       </div>
       <!-- FOOTER -->
       <footer>
-        <a href="#">Linkedin</a>
-        <a href="#">Twitter</a>
-        <a href="#">Instagram</a>
-        <a href="#">Github</a>
+        <a href="https://www.linkedin.com/in/tessa-fabry-80874b69/" target="_blank"><i class="fab fa-linkedin"></i></a>
+        <a href="https://twitter.com/tessssssssy" target="_blank"><i class="fab fa-twitter-square"></i></a>
+        <a href="https://www.instagram.com/tessssssssy/" target="_blank"><i class="fab fa-instagram"></i></a>
+        <a href="https://github.com/tessssssssy" target="_blank"><i class="fab fa-github"></i></a>
       </footer>
     </div>
     <script src="index.js"></script>
   </body>
 </html>
+
