--- a/about.html
+++ b/about.html
@@ -10,7 +10,6 @@
     <link href="https://fonts.googleapis.com/css?family=Lora:400,600&display=swap" rel="stylesheet">
 
     <!-- ICONS -->
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/js/all.min.js"></script> -->
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
     <title>About</title>
   </head>
@@ -24,12 +23,11 @@
         <a href="./blog.html" class="nav-link">Blog</a>
         <a href="https://github.com/tessssssssy" class="nav-link" target="_blank">Github</a>
       </div>
-      <!--  -->
+      <!-- ICON FOR MOBILE NAV -->
       <div id="hamburger"><i class="fa fa-bars"></i></div>
-      <!-- <button id="hamburger">View</button> -->
     </nav>
+    
     <!-- Content -->
-
     <div class="about">
       <h2>About Me</h2>
       <!-- BIO -->
