--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" type="text/css" href="about.css" />
+    <link rel="stylesheet" type="text/css" href="about.css" integrity="-sha384-+aZEi0NB9gyZYiqwQSZvMd4E0XCjZUzEQ9sCeAC2QjaCOHjPemQ5X9vxS2DML2Vy"/>
     <!-- FONTS -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Prata&display=swap" rel="stylesheet">
@@ -26,7 +26,7 @@
       <!-- ICON FOR MOBILE NAV -->
       <div id="hamburger"><i class="fa fa-bars"></i></div>
     </nav>
-    
+
     <!-- Content -->
     <div class="about">
       <h2>About Me</h2>
