--- a/about.html
+++ b/about.html
@@ -77,6 +77,6 @@
         <a href="https://www.instagram.com/tessssssssy/" target="_blank"><i class="fab fa-instagram"></i></a>
         <a href="https://github.com/tessssssssy" target="_blank"><i class="fab fa-github"></i></a>
       </footer>
-      <script src="index.js"></script>
+      <script src="index.js" integrity="-sha384-13IJm2lPX4UnLoUUPxw5g8HgEn+VfsGXY0MjUczztxQZHWbDmkUSNkjDBzDEWA6G"></script>
   </body>
 </html>
