--- a/blog.html
+++ b/blog.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" type="text/css" href="blog.css" />
+    <link rel="stylesheet" type="text/css" href="blog.css" integrity="-sha384-V96emByXo35dKPQjbukmCG/Qo+87CuKpjwSfwJm0XKQBPmZG6f6SSfXu6Ry/c4Q+"/>
 
      <!-- FONTS -->
      <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400&display=swap" rel="stylesheet">
@@ -206,6 +206,6 @@
       <a href="https://www.instagram.com/tessssssssy/" target="_blank"><i class="fab fa-instagram"></i></a>
       <a href="https://github.com/tessssssssy" target="_blank"><i class="fab fa-github"></i></a>
       </footer>
-      <script src="index.js"></script>
+      <script src="index.js" integrity="-sha384-13IJm2lPX4UnLoUUPxw5g8HgEn+VfsGXY0MjUczztxQZHWbDmkUSNkjDBzDEWA6G"></script>
   </body>
 </html>
