--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="contact.css" />
+    <link rel="stylesheet" type="text/css" href="contact.css" integrity="-sha384-dbLSv5dtOIWVKmBnyFM8BTqXbpaG7jEM9Mktl5RoethS6ACs3/Yol8Xz2Tupw3Ir"/>
 
      <!-- FONTS -->
      <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400&display=swap" rel="stylesheet">
@@ -49,6 +49,6 @@
       <a href="https://www.instagram.com/tessssssssy/" target="_blank"><i class="fab fa-instagram"></i></a>
       <a href="https://github.com/tessssssssy" target="_blank"><i class="fab fa-github"></i></a>
       </footer>
-      <script src="index.js"></script>
+      <script src="index.js" integrity="-sha384-13IJm2lPX4UnLoUUPxw5g8HgEn+VfsGXY0MjUczztxQZHWbDmkUSNkjDBzDEWA6G"></script>
 </body>
 </html>
