add resume fix links

--- a/about.html
+++ b/about.html
@@ -65,9 +65,9 @@
       <!-- LINKS -->
       <h3>Links</h3>
       <div class="links-container">
-          <a href="https://www.linkedin.com/in/tessa-fabry-80874b69/">Linkedin</a>
-          <a href="https://github.com/tessssssssy">Github</a>
-          <a href="#">Resume</a>
+          <a href="https://www.linkedin.com/in/tessa-fabry-80874b69/" target="_blank">Linkedin</a>
+          <a href="https://github.com/tessssssssy" target="_blank">Github</a>
+          <a href="resume.pdf" target="_blank">Resume</a>
       </div>
     </div>
     <!-- FOOTER -->
