--- a/blog.html
+++ b/blog.html
@@ -30,6 +30,7 @@
     </nav>
     <div class="blog">
       <h2>Blog</h2>
+      <div class="blog-post-container">
       <div class="blog-post">
         <header>
           <h3>A Blog Post</h3>
@@ -196,6 +197,7 @@
             exercitationem quod unde.
           </p>
         </article>
+      </div>
       </div>
       
     </div>
